--- a/index.html
+++ b/index.html
@@ -4,16 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> <b>Books Store</b> </title>
+    <title> Books Store </title>
 </head>
 
-<body>  
-    <h1>Books Store</h1>
-    <p>This is My <b>Books</b> Store,Welcome </p>
-    <a href="https://www.google.com/"target="_blank"title="click to go" >google</a>
-    
-    
+<body>
 
+    <div>
+        <h1>Books Store</h1>
+        <p>This is <span>My</span> <b>Books</b> Store,<br> Welcome </p>
+        <div> this is my &lt;p &gt; &copy; </div>
+    </div>
+    <hr>
+    <audio controls autoplay loop muted>
+        <source src="audio/غريب ال مخلص  - خيبه (حصرياً) _ 2021(MP3_160K).mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
+    <form action="" method="get">
+        <div>
+            <label>Username</label>
+            <input type="text" required placeholder="Enter Your Name" name="username" value="Akram" readonly>
+        </div>
+        <br>
+        <div>
+            <label>password</label>
+            <input type="password" required minlength="4" maxlength="8" placeholder="Enter Your Password"
+                name="password" autofocus>
+        </div>
+        <br>
+        <div>
+            <label>Email</label>
+            <input type="email" required placeholder="Enter Your Email" value="AKram@ak.org" name="email" disabled>
+        </div>
+        <input type="hidden" value="100" name="id">
+        <input type="color" name="color">
+        <br>
+        <input type="range" min="10" max="100" step="2" value="10" name="range">
+        <br>
+        <input type="number" min="0" max="10" step="2" name="number">
+        <br>
+        <input type="reset" value="Reset">
+        <br>
+        <input type="submit" value="submit">
+    </form>
 
 </body>
 
