--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -10,12 +10,92 @@
 
 <body>
 
-
+<!-- 
     <p>the is Paragraph</p>
     <p class="special">the is Paragraph</p>
-    <p>the is Paragraph</p>
+    <p>the is Paragraph</p> -->
+
+    <!-- <div>
+        <h2>Hello World</h2>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+    </div> -->
+    
+    <!-- <div>
+        <h2>Hello World</h2>
+        <p>the is Paragraph</p>
+        <p>the is Paragraph</p>
+    </div> -->
+
+    <!-- <div class="assign-1-shape-1">Normal Div</div>
+<div class="assign-1-shape-2">Normal Div</div>
+<div class="assign-1-shape-3">Normal Div</div> -->
+
+<!-- <div class="assign-2-shape-1">Normal Div</div>
+<div class="assign-2-shape-2">Normal Div</div>
+<div class="assign-2-shape-3">Normal Div</div>
+<div class="assign-2-shape-4">Normal Div</div> -->
+
+<!-- <div class="assign-3-shape-1">Normal Div</div>
+<div class="assign-3-shape-2">Normal Div</div>
+<div class="assign-3-shape-3">Normal Div</div>
+<div class="assign-3-shape-4">Normal Div</div> -->
 
 
+
+<!-- <div class="assign-4-shape-1">Normal Div</div>
+<div class="assign-4-shape-2">Normal Div</div>
+<div class="assign-4-shape-3">Normal Div</div>
+<div class="assign-4-shape-4">Normal Div</div> -->
+
+
+<!-- <div class="element-1">This Is Important Note</div>
+<div class="element-2" >This Is Important Note</div>
+<div class="element-3">This Is Important Not -->
+
+
+<!-- <div class="element-1">Shape1</div>
+<div class="element-2" >Shape2</div>
+<div class="element-3">Shape3</div> -->
 
 </body>
 
