Modified File Css-proj

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -97,6 +97,48 @@
 <div class="element-2" >Shape2</div>
 <div class="element-3">Shape3</div> -->
 
+<!-- 
+<div class="one">One</div>
+<div class="two">Two</div>
+<p>this is paragraph</p> -->
+
+<!-- 
+<div>
+    <h2>Title</h2>
+    <p>paragraph inside</p>
+    <p class="special">paragraph</p>
+</div>
+<p>paragraph outside</p> -->
+
+<!-- <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aspernatur asperiores delectus qui sed culpa eum rerum, natus magnam repellendus expedita Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique aspernatur nemo repellat, molestias rem reprehenderit magni. Optio ut unde a aut nulla architecto recusandae! Suscipit nihil enim vitae dolorem sint. id hic similique obcaecati nostrum explicabo. Ad, dolorem dolorum?</div> -->
+
+<!-- 
+<div class="parent">
+  <div class="child">This Is Child <span class="title">Title</span></div>
+  <span class="title">Child Title</span>
+  <p>Paragraph Content</p>
+</div>
+<div class="title">Section Title</div>
+<br>
+<hr>
+<div class="one">title one</div>
+<div class="one">title two with more words </div>
+<div class="one">title three with many many many many words </div>
+<div class="one">title three with many many many many words  title three with many many many many words 
+    title three with many many many many words 
+title three with many many many many words 
+title three with many many many many words title three with many many many many words 
+title three with many many many many words 
+</div> -->
+
+<!-- <div class="one">title three with many many many many words  title three with many many many many words 
+    title three with many many many many words 
+title three with many many many many words 
+title three with many many many many words title three with many many many many words 
+title three with many many many many words  -->
+
+
+
 </body>
 
 </html>
