--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Css</title>
     <link rel="stylesheet" href="/CSS_Project/css/main.css">
 </head>
 
 <body>
 
-<!-- 
+    <!-- 
     <p>the is Paragraph</p>
     <p class="special">the is Paragraph</p>
     <p>the is Paragraph</p> -->
@@ -59,7 +59,7 @@
         <p>the is Paragraph</p>
         <p>the is Paragraph</p>
     </div> -->
-    
+
     <!-- <div>
         <h2>Hello World</h2>
         <p>the is Paragraph</p>
@@ -70,39 +70,39 @@
 <div class="assign-1-shape-2">Normal Div</div>
 <div class="assign-1-shape-3">Normal Div</div> -->
 
-<!-- <div class="assign-2-shape-1">Normal Div</div>
+    <!-- <div class="assign-2-shape-1">Normal Div</div>
 <div class="assign-2-shape-2">Normal Div</div>
 <div class="assign-2-shape-3">Normal Div</div>
 <div class="assign-2-shape-4">Normal Div</div> -->
 
-<!-- <div class="assign-3-shape-1">Normal Div</div>
+    <!-- <div class="assign-3-shape-1">Normal Div</div>
 <div class="assign-3-shape-2">Normal Div</div>
 <div class="assign-3-shape-3">Normal Div</div>
 <div class="assign-3-shape-4">Normal Div</div> -->
 
 
 
-<!-- <div class="assign-4-shape-1">Normal Div</div>
+    <!-- <div class="assign-4-shape-1">Normal Div</div>
 <div class="assign-4-shape-2">Normal Div</div>
 <div class="assign-4-shape-3">Normal Div</div>
 <div class="assign-4-shape-4">Normal Div</div> -->
 
 
-<!-- <div class="element-1">This Is Important Note</div>
+    <!-- <div class="element-1">This Is Important Note</div>
 <div class="element-2" >This Is Important Note</div>
 <div class="element-3">This Is Important Not -->
 
 
-<!-- <div class="element-1">Shape1</div>
+    <!-- <div class="element-1">Shape1</div>
 <div class="element-2" >Shape2</div>
 <div class="element-3">Shape3</div> -->
 
-<!-- 
+    <!-- 
 <div class="one">One</div>
 <div class="two">Two</div>
 <p>this is paragraph</p> -->
 
-<!-- 
+    <!-- 
 <div>
     <h2>Title</h2>
     <p>paragraph inside</p>
@@ -110,9 +110,9 @@
 </div>
 <p>paragraph outside</p> -->
 
-<!-- <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aspernatur asperiores delectus qui sed culpa eum rerum, natus magnam repellendus expedita Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique aspernatur nemo repellat, molestias rem reprehenderit magni. Optio ut unde a aut nulla architecto recusandae! Suscipit nihil enim vitae dolorem sint. id hic similique obcaecati nostrum explicabo. Ad, dolorem dolorum?</div> -->
+    <!-- <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aspernatur asperiores delectus qui sed culpa eum rerum, natus magnam repellendus expedita Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique aspernatur nemo repellat, molestias rem reprehenderit magni. Optio ut unde a aut nulla architecto recusandae! Suscipit nihil enim vitae dolorem sint. id hic similique obcaecati nostrum explicabo. Ad, dolorem dolorum?</div> -->
 
-<!-- 
+    <!-- 
 <div class="parent">
   <div class="child">This Is Child <span class="title">Title</span></div>
   <span class="title">Child Title</span>
@@ -131,12 +131,64 @@ title three with many many many many words title three with many many many many 
 title three with many many many many words 
 </div> -->
 
-<!-- <div class="one">title three with many many many many words  title three with many many many many words 
+    <!-- <div class="one">title three with many many many many words  title three with many many many many words 
     title three with many many many many words 
 title three with many many many many words 
 title three with many many many many words title three with many many many many words 
 title three with many many many many words  -->
 
+    <!-- <div>Eng.Akram Alkhalifa</div> -->
+
+
+    <!-- <div>Eng.Akram <img decoding="async" src="https://placehold.co/60x40/red/white" alt=""> Alkhalifa.</div>
+<div >والسلام عليكم.</div> -->
+
+
+
+    <!-- <div class="one">elzero web school</div>
+<a href="#">google</a>
+<div class="two">elzero web school</div> -->
+
+    <!-- <div class="one">elzero web school</div>
+
+    <div class="two">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quidem impedit, architecto
+        deleniti non accusantium quam harum debitis ex facere atque error laudantium accusamus explicabo consequuntur
+        voluptate exercitationem eaque voluptas?
+    </div>
+    <div class="a">https://www.youtube.com/watch?v=Hphs2vBjmQs&list=PLDoPjvoNmBAzjsz06gkzlSrlev53MGIKe&index=20</div> -->
+
+<!-- <div> welcome to elzero web school elzero web school</div> -->
+
+
+<!-- <p>elzero web school</p> -->
+
+
+<!-- 
+<p class="one">elzero Web school</p>
+<p class="two">elzero Web school</p>
+<p class="three">elzero Web school</p> -->
+
+<!-- 
+<div class="o">
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+  Ea itaque fugit vitae incidunt quis dolores? Id alias
+  eveniet sequi perspiciatis iusto impedit,
+  accusamus maxime reprehenderit blanditiis adipisci sapiente hic velit.
+</div>
+<div  class="t">
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+  Ea itaque fugit vitae incidunt quis dolores? Id alias
+  eveniet sequi perspiciatis iusto impedit,
+  accusamus maxime reprehenderit blanditiis adipisci sapiente hic velit.
+</div>
+<div class="r">
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+  Ea itaque fugit vitae incidunt quis dolores? Id alias
+  eveniet sequi perspiciatis iusto impedit,
+  accusamus maxime reprehenderit blanditiis adipisci sapiente hic velit.
+</div>
+
+<a href="https://elzero.org">elzero</a> -->
 
 
 </body>
