--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+<head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css</title>
     <link rel="stylesheet" href="/CSS_Project/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -189,6 +191,34 @@ title three with many many many many words  -->
 </div>
 
 <a href="https://elzero.org">elzero</a> -->
+
+<!-- <div>
+    <h1>elzero Web school</h1>
+    <p>Welcome To my website <span>😁 Ak Tech</span></p>
+</div> -->
+
+
+<!-- <a href="#">google</a>
+<span>Test</span>
+<button>Click</button>
+<hr>
+<p>Test p</p> -->
+
+
+<!-- <div >
+    <p>This Is Paragraph</p>
+</div>
+
+<br>
+<hr> -->
+
+
+    <!-- <p class="pTest">Elzero Web School</p> -->
+
+
+
+
+
 
 
 </body>
