Modified File Css-proj

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -365,14 +365,14 @@ title three with many many many many words  -->
         nostrum in.</p>
      -->
 
-     <!-- <div>
+    <!-- <div>
         <div class="one">one</div>
         <div class="two">two</div>
         <div class="three">three</div>
      </div> -->
 
 
-<!-- <ul>
+    <!-- <ul>
     <li>Html</li>
     <li>Css</li>
     <li>Js
@@ -384,7 +384,7 @@ title three with many many many many words  -->
 </ul> -->
 
 
-<!-- 
+    <!-- 
 <table >
     <caption>Students</caption>
     <thead>
@@ -413,14 +413,14 @@ title three with many many many many words  -->
 </table> -->
 
 
-<!-- 
+    <!-- 
 <div class="green"></div>
 <div class="red"></div>
 <div class="blue"></div>
 <div class="black"></div> -->
 
 
-<!-- 
+    <!-- 
 <div>
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, sed. Ea ipsum
   similique quasi rem, fugiat voluptatibus reiciendis nam debitis earum quo veniam
@@ -431,7 +431,7 @@ title three with many many many many words  -->
   <span class="bottom-right">4</span>
 </div> -->
 
-<!-- 
+    <!-- 
 <ul class="list">
   <li class="html">
     HTML
@@ -459,7 +459,7 @@ title three with many many many many words  -->
 </ul> -->
 
 
-<!-- 
+    <!-- 
 <table>
     <thead>
         <tr>
@@ -540,7 +540,7 @@ title three with many many many many words  -->
         </tfoot>
 </table> -->
 
-<!-- 
+    <!-- 
 <ul class="list">
         <li class="html">
           HTML
@@ -566,9 +566,82 @@ title three with many many many many words  -->
           </ul>
         </li>
     </ul> -->
+    <!-- 
+<div class="one">normal element</div>
+<hr>
+<div class="two"></div>
+<hr>
+<a href="http://" target="_blank">link1</a>
+
+<a href="#">link2</a>
+<hr>
+<form action="" method="get">
+<div>
+    <input type="text" class="in">
+</div>
+<div>
+    <input type="checkbox" class="ch">
+    <label for="">Test check  </label>
+</div>
+</form> -->
+
+    <!-- 
+    <p class="one"> <span>L</span>orem ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat, consequatur
+        expedita doloribus qui quos praesentium dolorem, cum a sapiente, hic reprehenderit libero illo amet minus
+        exercitationem tenetur. Dignissimos, nostrum!</p>
+    <hr>
+    <p class="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat, consequatur expedita doloribus
+        qui quos praesentium dolorem, cum a sapiente, hic reprehenderit libero illo amet minus exercitationem tenetur.
+        Dignissimos, nostrum!</p>
+    <hr>
+    <p class="three">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat, consequatur expedita doloribus
+        qui quos praesentium dolorem, cum a sapiente, hic reprehenderit libero illo amet minus exercitationem tenetur.
+        Dignissimos, nostrum!</p>
+    <hr>
+    <p class="four">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat, consequatur expedita doloribus
+        qui quos praesentium dolorem, cum a sapiente, hic reprehenderit libero illo amet minus exercitationem tenetur.
+        Dignissimos, nostrum!</p> -->
+
+
+    <div class="parent">
+        <div class="user">O</div>
+            <div class="one">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas adipisci
+                consequatur eos iste tenetur, voluptatem maiores eligendi possimus tempore laborum odio libero
+                asperiores placeat in id nulla facilis impedit.
+        </div>
+    </div>
+    <div class="parent">
+        <div class="user">A</div>
+            <div class="one">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas adipisci
+                consequatur eos iste tenetur, voluptatem maiores eligendi possimus tempore laborum odio libero
+                asperiores placeat in id nulla facilis impedit.
+        </div>
+    </div>
+    <div class="parent">
+        <div class="user">M</div>
+            <div class="one">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas adipisci
+                consequatur eos iste tenetur, voluptatem maiores eligendi possimus tempore laborum odio libero
+                asperiores placeat in id nulla facilis impedit.
+        </div>
+    </div>
+    <div class="parent">
+        <div class="user">M</div>
+            <div class="one">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas adipisci
+                consequatur eos iste tenetur, voluptatem maiores eligendi possimus tempore laborum odio libero
+                asperiores placeat in id nulla facilis impedit.
+        </div>
+    </div>
+
+<hr>
+<ul>
+    <li>one</li>
+    <li>one</li>
+    <li>one</li>
+    <li>one</li>
+</ul>
+
 
 
 </body>
 
 </html>
-
