--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -602,7 +602,7 @@ title three with many many many many words  -->
         qui quos praesentium dolorem, cum a sapiente, hic reprehenderit libero illo amet minus exercitationem tenetur.
         Dignissimos, nostrum!</p> -->
 
-
+<!-- 
     <div class="parent">
         <div class="user">O</div>
             <div class="one">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas adipisci
@@ -639,6 +639,38 @@ title three with many many many many words  -->
     <li>one</li>
     <li>one</li>
 </ul>
+ -->
+
+
+
+
+
+<!-- <div>One</div>
+<div></div>
+<div>Three</div>
+<hr> -->
+
+
+
+
+<!-- <p data-person="Osama">This Is Very Very Long Comment Number One</p>
+<p data-person="Ahmed">This Is Very Very Long Comment Number Two</p>
+<p data-person="Sayed">This Is Very Very Long Comment Number Three</p> -->
+
+<!-- <p>This Is Very Very Long Product Title</p>
+<p>This Is Very Very Long Product Title</p>
+<p>This Is Very Very Long Product Title</p>
+<p>This Is Very Very Long Product Title</p>
+<p>This Is Very Very Long Product Title</p>
+<p>This Is Very Very Long Product Title</p>
+ -->
+
+
+   <!-- <div class="text"><span>1</span> Hello, Welcome To Elzero Web School</div> -->
+
+
+
+
 
 
 
