--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Css</title>
-    <link rel="stylesheet" href="/CSS_Project/css/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
-        rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="/CSS_Project/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet" />
+  </head>
 
-<body>
-
+  <body>
     <!-- 
     <p>the is Paragraph</p>
     <p class="special">the is Paragraph</p>
@@ -83,18 +82,14 @@
 <div class="assign-3-shape-3">Normal Div</div>
 <div class="assign-3-shape-4">Normal Div</div> -->
 
-
-
     <!-- <div class="assign-4-shape-1">Normal Div</div>
 <div class="assign-4-shape-2">Normal Div</div>
 <div class="assign-4-shape-3">Normal Div</div>
 <div class="assign-4-shape-4">Normal Div</div> -->
 
-
     <!-- <div class="element-1">This Is Important Note</div>
 <div class="element-2" >This Is Important Note</div>
 <div class="element-3">This Is Important Not -->
-
 
     <!-- <div class="element-1">Shape1</div>
 <div class="element-2" >Shape2</div>
@@ -142,11 +137,8 @@ title three with many many many many words  -->
 
     <!-- <div>Eng.Akram Alkhalifa</div> -->
 
-
     <!-- <div>Eng.Akram <img decoding="async" src="https://placehold.co/60x40/red/white" alt=""> Alkhalifa.</div>
 <div >والسلام عليكم.</div> -->
-
-
 
     <!-- <div class="one">elzero web school</div>
 <a href="#">google</a>
@@ -162,9 +154,7 @@ title three with many many many many words  -->
 
     <!-- <div> welcome to elzero web school elzero web school</div> -->
 
-
     <!-- <p>elzero web school</p> -->
-
 
     <!-- 
 <p class="one">elzero Web school</p>
@@ -198,13 +188,11 @@ title three with many many many many words  -->
     <p>Welcome To my website <span>😁 Ak Tech</span></p>
 </div> -->
 
-
     <!-- <a href="#">google</a>
 <span>Test</span>
 <button>Click</button>
 <hr>
 <p>Test p</p> -->
-
 
     <!-- <div >
     <p>This Is Paragraph</p>
@@ -212,7 +200,6 @@ title three with many many many many words  -->
 
 <br>
 <hr> -->
-
 
     <!-- <p class="pTest">Elzero Web School</p> -->
 
@@ -242,7 +229,6 @@ title three with many many many many words  -->
     </form>
  -->
 
-
     <!-- <div class="parent">
     <div>Product One</div>
     <div>Product Two</div>
@@ -251,7 +237,6 @@ title three with many many many many words  -->
     <p class="clear"></p>
 </div>
 <p>This  IS P For Testing Flout</p> -->
-
 
     <!-- <div>Product One</div>
 <div>Product Two</div>
@@ -292,7 +277,6 @@ title three with many many many many words  -->
             <div class="ch4" >1/4</div>
 
 </div> -->
-
 
     <!-- 
    <div class="parent">
@@ -371,7 +355,6 @@ title three with many many many many words  -->
         <div class="three">three</div>
      </div> -->
 
-
     <!-- <ul>
     <li>Html</li>
     <li>Css</li>
@@ -382,7 +365,6 @@ title three with many many many many words  -->
         </ul>
     </li>
 </ul> -->
-
 
     <!-- 
 <table >
@@ -412,13 +394,11 @@ title three with many many many many words  -->
     </tbody>
 </table> -->
 
-
     <!-- 
 <div class="green"></div>
 <div class="red"></div>
 <div class="blue"></div>
 <div class="black"></div> -->
-
 
     <!-- 
 <div>
@@ -457,7 +437,6 @@ title three with many many many many words  -->
     </ul>
   </li>
 </ul> -->
-
 
     <!-- 
 <table>
@@ -602,7 +581,7 @@ title three with many many many many words  -->
         qui quos praesentium dolorem, cum a sapiente, hic reprehenderit libero illo amet minus exercitationem tenetur.
         Dignissimos, nostrum!</p> -->
 
-<!-- 
+    <!-- 
     <div class="parent">
         <div class="user">O</div>
             <div class="one">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptas adipisci
@@ -631,7 +610,7 @@ title three with many many many many words  -->
                 asperiores placeat in id nulla facilis impedit.
         </div>
     </div>
-
+F[]
 <hr>
 <ul>
     <li>one</li>
@@ -641,39 +620,50 @@ title three with many many many many words  -->
 </ul>
  -->
 
-
-
-
-
-<!-- <div>One</div>
+    <!-- <div>One</div>
 <div></div>
 <div>Three</div>
 <hr> -->
 
-
-
-
-<!-- <p data-person="Osama">This Is Very Very Long Comment Number One</p>
+    <!-- <p data-person="Osama">This Is Very Very Long Comment Number One</p>
 <p data-person="Ahmed">This Is Very Very Long Comment Number Two</p>
 <p data-person="Sayed">This Is Very Very Long Comment Number Three</p> -->
 
-<!-- <p>This Is Very Very Long Product Title</p>
+    <!-- <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
- -->
+-->
+
+<!-- <div class="text"><span>1</span> Hello, Welcome To Elzero Web School</div> -->
 
 
-   <!-- <div class="text"><span>1</span> Hello, Welcome To Elzero Web School</div> -->
+<!-- <div class="one"></div>
+<div class="two"></div> -->
 
 
+<!-- <diV> Element</diV> -->
 
 
+<!-- <div class="parent">
+    <div class="one">one</div>
+    <div class="one">one</div>
+</div> -->
+
+
+<!-- <div class="parent">
+    <div class="one">one</div>
+    <div class="one">one</div>
+</div> -->
+
+
+<div>Element</div>
+<div>Element</div>
+<div>Element</div>
 
 
 
 </body>
-
 </html>
