--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -659,9 +659,25 @@ F[]
 </div> -->
 
 
+<!-- <div>Element</div>
 <div>Element</div>
-<div>Element</div>
-<div>Element</div>
+<div>Element</div> -->
+
+
+
+<!-- <div></div> -->
+
+<!-- <div class="parent">
+    <div class="one">
+        <h4>Basic</h4>
+        <p>Free</p>
+    </div>
+
+    <div class="two">
+        <h4>Pro</h4>
+        <p>$30</p>
+    </div>
+</div> -->
 
 
 
