--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -637,37 +637,30 @@ F[]
 <p>This Is Very Very Long Product Title</p>
 -->
 
-<!-- <div class="text"><span>1</span> Hello, Welcome To Elzero Web School</div> -->
+    <!-- <div class="text"><span>1</span> Hello, Welcome To Elzero Web School</div> -->
 
-
-<!-- <div class="one"></div>
+    <!-- <div class="one"></div>
 <div class="two"></div> -->
 
+    <!-- <diV> Element</diV> -->
 
-<!-- <diV> Element</diV> -->
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div class="one">one</div>
     <div class="one">one</div>
 </div> -->
 
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div class="one">one</div>
     <div class="one">one</div>
 </div> -->
 
-
-<!-- <div>Element</div>
+    <!-- <div>Element</div>
 <div>Element</div>
 <div>Element</div> -->
 
+    <!-- <div></div> -->
 
-
-<!-- <div></div> -->
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div class="one">
         <h4>Basic</h4>
         <p>Free</p>
@@ -679,7 +672,52 @@ F[]
     </div>
 </div> -->
 
+    <!-- <div class="one">one</div> -->
+
+    <!-- <div class="one" style="background-color: red">one</div> -->
+
+    <!-- 
+<div class="parent">
+    <div class="one"></div>
+    <div class="two">
+        <div class="test">
+            <div class="up"></div>
+        </div>
+        <div class="down"></div>
+    </div>
+</div>
+
+ -->
+
+    <!-- 
+ <div class="main">Akram</div>
+ <h3>Akram</h3>
+ <p>Akram</p>
+ <a href="#">Ak</a>
+ <div class="local">Ak</div> -->
+
+    <!-- <div class="parent">
+      Will Go Up On Hover In Half Second
+      <div class="one">Will Go Down Half Second</div>
+    </div> -->
 
 
-</body>
+<!-- 
+<div style="
+  background-color: red;
+  color: white;
+  padding: 20px;
+  border: 1px solid blue;
+  font-size: 80px;">
+  Hello Div
+</div> -->
+
+<!-- <div>Element</div>
+<div>Element</div>
+<div>Element</div> -->
+
+
+
+
+  </body>
 </html>
