--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -717,7 +717,36 @@ F[]
 <div>Element</div> -->
 
 
+<!-- <h2>Flex</h2>
+<div class="flex">
+    <div class="one">one</div>
+    <div class="two">two</div>
+    <div>three</div>
+</div>
+<hr>
+<h2>Flout</h2>
+<div class="flout">
+    <div class="one">one</div>
+    <div class="two">two</div>
+    <div>three</div>
+</div>
 
+<div class="center">center</div> -->
+
+
+
+
+<div class="parent">
+    <div>one</div>
+    <div>two</div>
+    <div>three</div>
+    <div>four</div>
+    <div>five</div>
+    <div>five</div>
+    <div>six</div>
+    <div>sever</div>
+    <div>nine</div>
+</div>
 
   </body>
 </html>
