--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -736,7 +736,7 @@ F[]
 
 
 
-<div class="parent">
+<!-- <div class="parent">
     <div>one</div>
     <div>two</div>
     <div>three</div>
@@ -746,6 +746,63 @@ F[]
     <div>six</div>
     <div>sever</div>
     <div>nine</div>
+</div> -->
+
+
+
+
+<!-- <div class="flex">
+    <div>1</div>
+    <div class="two">2</div>
+    <div style="flex-shrink: 1;">3</div>
+    <div>4</div>
+    <div style="flex-grow: 0;">5</div>
+    <div>6</div>
+</div>
+
+<div class="in">in</div> -->
+
+
+
+
+<!-- <div class="flex">
+    <div>1</div>
+    <div class="two">2</div>
+    <div>3</div>
+    <div>4</div>
+    <div class="five">5</div>
+    <div>6</div>
+</div> -->
+
+
+<!-- 
+<div>Elzero</div> -->
+
+
+
+<!-- <div class="parent">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+  <div>4</div>
+  <div>5</div>
+  <div>6</div>
+</div> -->
+
+<!-- <div class="parent">
+  <div class="one">1</div>
+  <div class="two">2</div>
+  <div class="three">3</div>
+  <div class="four">4</div>
+  <div class="five">5</div>
+  <div class="six">6</div>
+</div> -->
+
+
+<div class="parent">
+  <div class="one">1</div>
+  <div class="two">2</div>
+  <div class="three">3</div>
 </div>
 
   </body>
