--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Css</title>
-    <link rel="stylesheet" href="/CSS_Project/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
-      rel="stylesheet" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
 
   <body>
@@ -701,8 +697,7 @@ F[]
       <div class="one">Will Go Down Half Second</div>
     </div> -->
 
-
-<!-- 
+    <!-- 
 <div style="
   background-color: red;
   color: white;
@@ -712,12 +707,11 @@ F[]
   Hello Div
 </div> -->
 
-<!-- <div>Element</div>
+    <!-- <div>Element</div>
 <div>Element</div>
 <div>Element</div> -->
 
-
-<!-- <h2>Flex</h2>
+    <!-- <h2>Flex</h2>
 <div class="flex">
     <div class="one">one</div>
     <div class="two">two</div>
@@ -733,10 +727,7 @@ F[]
 
 <div class="center">center</div> -->
 
-
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div>one</div>
     <div>two</div>
     <div>three</div>
@@ -748,10 +739,7 @@ F[]
     <div>nine</div>
 </div> -->
 
-
-
-
-<!-- <div class="flex">
+    <!-- <div class="flex">
     <div>1</div>
     <div class="two">2</div>
     <div style="flex-shrink: 1;">3</div>
@@ -762,10 +750,7 @@ F[]
 
 <div class="in">in</div> -->
 
-
-
-
-<!-- <div class="flex">
+    <!-- <div class="flex">
     <div>1</div>
     <div class="two">2</div>
     <div>3</div>
@@ -774,13 +759,10 @@ F[]
     <div>6</div>
 </div> -->
 
-
-<!-- 
+    <!-- 
 <div>Elzero</div> -->
 
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -789,7 +771,7 @@ F[]
   <div>6</div>
 </div> -->
 
-<!-- <div class="parent">
+    <!-- <div class="parent">
   <div class="one">1</div>
   <div class="two">2</div>
   <div class="three">3</div>
@@ -798,12 +780,124 @@ F[]
   <div class="six">6</div>
 </div> -->
 
+    <!-- <div class="parent">
+      <div class="one">1</div>
+      <div class="two">2</div>
+      <div class="three">3</div>
+      <div class="four">4</div>
+    </div> -->
 
-<div class="parent">
-  <div class="one">1</div>
-  <div class="two">2</div>
-  <div class="three">3</div>
-</div>
+    <!-- 
+<div class="page">
+    <header>
+        <p>Logo</p>
+    </header>
+    <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <main>
+                <article> <p>content</p> </article>
+                <aside> <p>Sidebar</p> </aside>
+        </main>
+
+    <footer>
+        <p class="p1">Copyright 2021</p>
+        <p class="p2">Designed By Eng.Akram</p>
+    </footer>
+</div> -->
+
+    <!-- <div class="page">
+  <div class="header">
+    <div class="logo">Logo</div>
+    <ul class="links">
+      <li>Home</li>
+      <li>About</li>
+      <li>Services</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+  <div class="main-area">
+    <div class="content">Content</div>
+    <div class="sidebar">Sidebar</div>
+  </div>
+  <div class="footer">
+    <div class="copyright">Copyright 2021</div>
+    <div class="design">Designed By Elzero</div>
+  </div>
+</div> -->
+
+    <!-- <img src="/imgs/blue-aesthetic-5120x2880-17495-150x150.png" alt=""> -->
+    <!-- 
+<div>Eng.Akram</div> -->
+
+    <!-- <input type="text" />
+    <a href="#">aa</a>
+    <p contenteditable="true">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat dolor
+      numquam quia maxime deserunt ipsum ad, alias inventore magni velit
+      cupiditate nemo repellendus voluptate officia? Adipisci nihil eligendi
+      alias necessitatibus.
+    </p> -->
+
+
+<!-- <div contenteditable="">one</div>
+<div>two</div>
+<div>three</div> -->
+
+
+<!-- <div>Elzero</div> -->
+
+
+
+  <!-- <div class="page">
+    <div class="header">
+      <div class="logo">Logo</div>
+      <ul class="links">
+        <li>Home</li>
+        <li>About</li>
+        <li>Services</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+    <div class="main-area">
+      <div class="content">Content</div>
+      <div class="sidebar">Sidebar</div>
+    </div>
+    <div class="footer">
+      <div class="copyright">Copyright 2021</div>
+      <div class="design">Designed By Elzero</div>
+    </div>
+  </div> -->
+
+
+
+  <div class="page">
+    <header>
+        <h4>logo</h4>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>Content</article>
+        <aside>Sidebar</aside>
+    </main>
+    <footer>
+        <p>Copyright </p>
+        <p>Designed By Eng.Akram</p>
+    </footer>
+  </div>
+
 
   </body>
 </html>
