--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -844,17 +844,13 @@ F[]
       alias necessitatibus.
     </p> -->
 
-
-<!-- <div contenteditable="">one</div>
+    <!-- <div contenteditable="">one</div>
 <div>two</div>
 <div>three</div> -->
 
+    <!-- <div>Elzero</div> -->
 
-<!-- <div>Elzero</div> -->
-
-
-
-  <!-- <div class="page">
+    <!-- <div class="page">
     <div class="header">
       <div class="logo">Logo</div>
       <ul class="links">
@@ -874,9 +870,8 @@ F[]
     </div>
   </div> -->
 
-
-
-  <div class="page">
+    
+  <!-- <div class="page">
     <header>
         <h4>logo</h4>
         <nav>
@@ -896,7 +891,37 @@ F[]
         <p>Copyright </p>
         <p>Designed By Eng.Akram</p>
     </footer>
-  </div>
+  </div> -->
+
+<!-- <h2>Grid</h2>
+<div class="parent">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+    <div>9</div>
+</div> -->
+
+
+
+
+<div class="page">
+    <h2>Ak🧑‍💻tech</h2>
+    <nav><ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Contact</li>
+    </ul></nav>
+    <section>content</section>
+    <aside>sidebar</aside>
+    <footer>footer</footer>
+</div>
+
 
 
   </body>
