--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -870,8 +870,7 @@ F[]
     </div>
   </div> -->
 
-    
-  <!-- <div class="page">
+    <!-- <div class="page">
     <header>
         <h4>logo</h4>
         <nav>
@@ -893,7 +892,7 @@ F[]
     </footer>
   </div> -->
 
-<!-- <h2>Grid</h2>
+    <!-- <h2>Grid</h2>
 <div class="parent">
     <div>1</div>
     <div>2</div>
@@ -906,10 +905,7 @@ F[]
     <div>9</div>
 </div> -->
 
-
-
-
-<div class="page">
+    <!-- <div class="page">
     <h2>Ak🧑‍💻tech</h2>
     <nav><ul>
             <li>Home</li>
@@ -920,9 +916,42 @@ F[]
     <section>content</section>
     <aside>sidebar</aside>
     <footer>footer</footer>
-</div>
+</div> -->
+
+    <!-- <div class="parent">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+    <div>9</div>
+    <div>10</div>
+    <div>11</div>
+    <div>12</div>
+    <div>13</div>
+    <div>14</div>
+    <div>15</div>
+    <div>16</div>
+    <div>17</div>
+    <div>18</div>
+</div> -->
+
+    <div class="parent">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+    </div>
 
 
-
+    
   </body>
 </html>
