Add transform in css part 1

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -997,178 +997,18 @@ F[]
   <div>4</div>
 </div> -->
 
-    <div class="parent">
-      <div class="ch1">
-        <h4>Akram Alkhalifa</h4>
-        <h6>Web Development</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.perferendis
-          voluptatibus sapiente repellendus ipsa, magnam quaerat officia,
-          molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
+    <!-- <div class="parent">
+      <div>Transform</div>
+    </div> -->
+    <!-- <div class="image"><img src="/imgs/18-Ways-Programming-Can-Change-Your-Life.png" alt=""></div> -->
 
-      <div class="ch2">
-        <h4>Mohammed</h4>
-        <h6>Mobile App Development</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
+<!-- <div class="parent">
+      <div>Transform</div>
+    </div> -->
 
-      <div class="ch3">
-        <h4>Ali</h4>
-        <h6>Game Development</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
 
-      <div class="ch4">
-        <h4>Omar</h4>
-        <h6>Data Science & Analytics</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
 
-      <div class="ch5">
-        <h4>Youssef</h4>
-        <h6>Artificial Intelligence</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
+    <div>Elzero</div>
 
-      <div class="ch6">
-        <h4>Khalid</h4>
-        <h6>Cybersecurity</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
-
-      <div class="ch7">
-        <h4>Hussein</h4>
-        <h6>Embedded Systems / IoT</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
-
-      <div class="ch8">
-        <h4>Ibrahim</h4>
-        <h6>Cloud Computing & DevOps</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
-
-      <div class="ch9">
-        <h4>Mahmoud</h4>
-        <h6>Desktop Application Development</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
-
-      <div class="ch10">
-        <h4>Mostafa</h4>
-        <h6>Database Development & Management</h6>
-        <p class="p1">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
-          delectus quo sit vel error? Asperiores laudantium voluptates expedita
-          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
-          facere explicabo recusandae!
-        </p>
-        <p class="p2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          distinctio dolor magni quidem fugiat doloremque. Quos, vero
-          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
-          officia, molestias placeat omnis. Sapiente, dolore.
-        </p>
-      </div>
-    </div>
   </body>
 </html>
