--- a/CSS_Project/test.html
+++ b/CSS_Project/test.html
@@ -5,140 +5,222 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+  
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the body */
-body {
-  font-family: Arial;
-  margin: 0;
+.parent {
+    width: 100wv;
+    height: 100vh;
+    background-color: rebeccapurple ;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,auto));
+    gap: 8px;
+
+}
+.parent div {
+    background-color: cadetblue;
+    padding: 10px;
+    border-bottom: 2px solid #FF3D00;
 }
 
-/* Header/logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
+h6 {
+    opacity: 0.5;
 }
 
-/* Style the top navigation bar */
-.navbar {
-  display: flex;
-  background-color: #333;
+div .ch3 , div .ch5  , div .ch8 {
+    background-color: black;
+    color: white;
 }
 
-/* Style the navigation bar links */
-.navbar a {
-  color: white;
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
+.p1 {
+    font-weight: bold;
 }
 
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Column container */
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
-.main {
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row, .navbar {   
-    flex-direction: column;
-  }
+.ch1 {
+    grid-area:1 / 1 / 1/ 3 ;
 }
 </style>
 </head>
 <body>
 
-<!-- Note -->
-<div style="background:yellow;padding:5px">
-  <h4 style="text-align:center">Resize the browser window to see the responsive effect.</h4>
-</div>
+    <div class="parent">
+      <div class="ch1">
+        <h4>Akram Alkhalifa</h4>
+        <h6>Web Development</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.perferendis
+          voluptatibus sapiente repellendus ipsa, magnam quaerat officia,
+          molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
 
-<!-- Header -->
-<div class="header">
-  <h1>My Website</h1>
-  <p>With a <b>flexible</b> layout.</p>
-</div>
+      <div class="ch2">
+        <h4>Mohammed</h4>
+        <h6>Mobile App Development</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
 
-<!-- Navigation Bar -->
-<div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-</div>
+      <div class="ch3">
+        <h4>Ali</h4>
+        <h6>Game Development</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
 
-<!-- The flexible grid (content) -->
-<div class="row">
-  <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
-  </div>
-  <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2024</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2024</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-  </div>
-</div>
+      <div class="ch4">
+        <h4>Omar</h4>
+        <h6>Data Science & Analytics</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
 
-<!-- Footer -->
-<div class="footer">
-  <h2>Footer</h2>
-</div>
+      <div class="ch5">
+        <h4>Youssef</h4>
+        <h6>Artificial Intelligence</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
+
+      <div class="ch6">
+        <h4>Khalid</h4>
+        <h6>Cybersecurity</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
+
+      <div class="ch7">
+        <h4>Hussein</h4>
+        <h6>Embedded Systems / IoT</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
+
+      <div class="ch8">
+        <h4>Ibrahim</h4>
+        <h6>Cloud Computing & DevOps</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
+
+      <div class="ch9">
+        <h4>Mahmoud</h4>
+        <h6>Desktop Application Development</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
+
+      <div class="ch10">
+        <h4>Mostafa</h4>
+        <h6>Database Development & Management</h6>
+        <p class="p1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odit
+          delectus quo sit vel error? Asperiores laudantium voluptates expedita
+          architecto soluta odio, sapiente temporibus corrupti dolore blanditiis
+          facere explicabo recusandae!
+        </p>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+          distinctio dolor magni quidem fugiat doloremque. Quos, vero
+          perferendis voluptatibus sapiente repellendus ipsa, magnam quaerat
+          officia, molestias placeat omnis. Sapiente, dolore.
+        </p>
+      </div>
+    </div>
 
 </body>
 </html>
