Add transform in css part 2

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1009,7 +1009,38 @@ F[]
     <!-- <div>Elzero</div> -->
 
 
-<div>Akram</div>
+<!-- <div>Akram</div> -->
+
+
+<!-- <h2>page title</h2> -->
+
+
+<!-- <div class="shap">
+    <div class="box">Box</div>
+</div> -->
+
+
+
+
+<!-- <div class="shape">
+    <span class="origin"></span>
+    <div class="box">Box</div>
+</div> -->
+
+
+
+<!-- <div class="shape">
+    <span class="origin"></span>
+    <div class="box">Box</div>
+</div> -->
+
+
+
+<div class="shape">
+    <span class="origin"></span>
+    <div class="box">Box</div>
+</div>
+
 
 
   </body>
