Added animation in css part 1

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1063,7 +1063,26 @@ F[]
 
 <!-- <h1>Elzero</h1> -->
 
-<div></div>
+<!-- <div></div> -->
+
+
+
+<!-- <div>Animation</div> -->
+
+
+<!-- <div></div> -->
+
+
+
+<!-- <div>👌</div> -->
+
+
+
+<div class="load">
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+</div>
 
 
 
