--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1078,13 +1078,16 @@ F[]
 
 
 
-<div class="load">
+<!-- <div class="load">
     <div class="one"></div>
     <div class="two"></div>
     <div class="three"></div>
-</div>
+</div> -->
 
 
+<!-- <div></div> -->
+
+<!-- <span></span> -->
 
   </body>
 </html>
