--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1089,5 +1089,241 @@ F[]
 
 <!-- <span></span> -->
 
+<!-- <div title="one div">Hello</div>
+<h1>hi</h1>
+<div title="two div">Hello</div>
+<p>pp</p>
+<h2>asd</h2>
+<div title="titeldiv">Hello</div>
+<div title="s0">Hello</div>
+<div title="s1">Hello</div> -->
+
+
+
+<!-- <p>paragraph</p>
+<p>paragraph</p>
+<p>paragraph</p>
+
+<div> div
+    <p>paragraph</p>
+</div>
+
+<div> div
+    <p>paragraph</p>
+    <p>paragraph</p>
+</div>
+<div> div
+    <h4>h5</h4>
+    <p>paragraph</p>
+    <h4>h5</h4>
+</div>
+
+<div>
+    div
+    <h4>h5</h4>
+    <p>paragraph</p>
+    <p>paragraph</p>
+    <h4>h5</h4>
+</div> -->
+
+<!-- <p>paragraph</p>
+<p>paragraph</p>
+<p class="special">paragraph</p>
+<p>paragraph</p>
+<div>div</div>
+<div>div</div>
+<div>div</div>
+<div>div</div>
+<div>div</div>
+<div>div</div>
+<p>paragraph</p>
+ -->
+
+
+ <!-- <div>one</div>
+ <div></div>
+    <form action="">
+      <div>
+          <input type="checkbox" id="ch1" checked>
+        <label for="ch1">checkbox1</label>
+      </div>
+
+       <div>
+         <input type="checkbox" id="ch2" >
+        <label for="ch2">checkbox2</label>
+       </div>
+       <input type="text" disabled value="Disabled">
+       <div>
+        <input type="text" required placeholder="name" >
+       <span></span>
+       </div>
+       
+    </form> -->
+
+
+<!-- <div class="main red">Elzero</div>
+<div class="main">Testing</div>
+<div class="red">Testing</div>
+<div class="main red">Elzero</div>
+<p class="main red">Testing</p> -->
+
+
+
+<!-- <div class="parent">
+  <div class="child">Testing</div>
+  <div class="child">Elzero</div>
+</div>
+<div class="parent">
+  <div>
+    <div class="child">Testing</div>
+  </div>
+</div>
+<div class="child">Testing</div> -->
+
+
+
+<!-- <div class="parent">
+  <div class="baby">Testing</div>
+  <div class="baby">Testing</div>
+</div>
+<div class="parent">
+  <div class="baby">Elzero</div>
+</div>
+<div class="parent">
+  <div>
+    <div>Testing</div>
+  </div>
+  <div class="baby">Testing</div>
+</div>
+<div class="baby">Testing</div> -->
+
+
+<!-- <p>Testing</p>
+<div>Testing</div>
+<div>Testing</div>
+<div title="Elzero">Elzero</div>
+<div title="Hello">Elzero</div>
+<div title="HTML">Elzero</div>
+<div>Testing</div>
+<div class="no-need" title="Elzero">Testing</div>
+<div class="parent">
+  <div>Testing</div>
+  <p>Testing</p>
+  <div>Testing</div>
+  <div title="Elzero">Testing</div>
+  <div>Testing</div>
+  <div title="Elzero">Testing</div>
+</div> -->
+
+<!-- <div>
+  <p>Testing</p>
+  <div title="Elzero">Testing</div>
+  <p>Testing</p>
+</div>
+<div>
+  <p>Testing</p>
+  <div title="Elzero">Elzero</div>
+</div>
+<div class="no-need">
+  <p>Testing</p>
+  <div title="Elzero">Testing</div>
+</div>
+<div>
+  <p>Testing</p>
+  <p>Testing</p>
+  <div class="no-need" title="Elzero">Testing</div>
+</div>
+<div>
+  <p title="Elzero">Testing</p>
+  <p title="Elzero">Testing</p>
+  <div>Testing</div>
+</div>
+<div>
+  <p>Testing</p>
+  <div>Testing</div>
+  <div>Testing</div>
+</div> -->
+
+
+
+<!-- <div>
+  <div>Testing</div>
+  <div>Testing</div>
+  <div>Elzero</div>
+  <div>Testing</div>
+</div>
+<div>
+  <div>Testing</div>
+  <div>Testing</div>
+  <div>Testing</div>
+  <div>Elzero</div>
+  <div>Testing</div>
+  <p>Testing</p>
+</div>
+<div class="no-need">
+  <div>Testing</div>
+  <div>Testing</div>
+  <div>Testing</div>
+  <div>Testing</div>
+</div> -->
+
+
+<!-- <div>
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <h3>Testing</h3>
+  <h3>Testing</h3>
+  <div>Testing</div>
+</div>
+<div>
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <h3>Testing</h3>
+  <h3>Testing</h3>
+  <div>Elzero</div>
+  <div>Testing</div>
+</div>
+<div>
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <h3>Testing</h3>
+  <p>Testing</p>
+  <div>Testing</div>
+  <div>Testing</div>
+</div>
+<div>
+  <div>Testing</div>
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <h3>Testing</h3>
+  <div class="no-need">Testing</div>
+  <div>Testing</div>
+  <div>Testing</div>
+</div>
+<div class="no-need">
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <div>Testing</div>
+</div>
+<div class="no-need-2">
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <h3>Testing</h3>
+  <div>Testing</div>
+  <div>Testing</div>
+</div> -->
+
+<div>
+  <div>Testing</div>
+  <div>Elzero</div>
+  <div>Elzero</div>
+  <h3>Testing</h3>
+  <p>Elzero</p>
+  <h3>Testing</h3>
+  <div>Testing</div>
+</div>
+
   </body>
 </html>
