Added Media Queries in css

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Css</title>
     <link rel="stylesheet" href="css/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style media="print">
+        .parent > div {
+        font-size: 100px;
+        }   
+    </style>
   </head>
 
   <body>
@@ -1315,7 +1322,7 @@ F[]
   <div>Testing</div>
 </div> -->
 
-<div>
+<!-- <div>
   <div>Testing</div>
   <div>Elzero</div>
   <div>Elzero</div>
@@ -1323,7 +1330,85 @@ F[]
   <p>Elzero</p>
   <h3>Testing</h3>
   <div>Testing</div>
-</div>
+</div> -->
+
+
+
+<!-- <div class="parent">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+</div> -->
+
+
+<!-- <div class="parent">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+</div> -->
+
+
+
+
+<!-- <div class="parent">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+</div> -->
+
+
+
+
+<!-- <div class="assign-one">Elzero Web School</div> -->
+
+
+
+<!-- <div class="parent">
+    <div> product one
+        <p>this is product</p>
+    </div>
+    
+    <div> product two
+        <p>this is product</p>
+    </div>
+
+    <div> product three
+        <p>this is product</p>
+    </div>
+
+    <div> product four
+        <p>this is product</p>
+    </div>
+</div> -->
+
+<div class="parent">
+    <div class="one">
+        <h3> product one</h3>
+        <p>this is product</p>
+    </div>
+    
+    <div class="two"> 
+        <h3>product two</h3>
+        <p>this is product</p>
+    </div>
+
+    <div class="three"> 
+        <h3>product three</h3>
+        <p>this is product</p>
+    </div>
+
+    <div class="four"> 
+        <h3>product four</h3>
+        <p>this is product</p>
+    </div>
+</div> 
 
   </body>
 </html>
